--- a/TopList.html
+++ b/TopList.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabellenzeile hinzufügen</title>
-    <link rel="stylesheet" href="css/StyleSheet.css" />
+    <link rel="stylesheet" href="css/StyleSheet1.css" />
     
 </head>
 
