--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startseite</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/StyleSheet1.css" />
 </head>
 <body>
+    <br><br>
     <h1>Login</h1>
     <!-- Formularfeld zum Erstellen einer neuen Tabelle -->
     <div>
+        <br><br>
         <label>Anmelden</label>
         <input placeholder="Name" type="text" id="name" />
         <input placeholder="Passwort" type="text" id="passwort" />
         <button id="AnmeldeBtn">Anmelden</button>
+        <br><br>
         <br><br>
 
         <button id="GastBtn">Als Gast weiter</button>
