--- a/Tabelle.html
+++ b/Tabelle.html
@@ -249,8 +249,6 @@
                 });
             })
         }
-
-
         window.onload = GetAllDataRealTime;
 
     //-------- Filling Tabelle -------->
@@ -268,6 +266,7 @@
             var td5 = document.createElement("td");
             var td6 = document.createElement("td");
             var td7 = document.createElement("td");
+            var td8 = document.createElement("td");
             var ratingButton = document.createElement("td");
             var ControlDiv = document.createElement("td");
 
@@ -279,6 +278,7 @@
             td5.innerHTML = data.Alter;
             td6.innerHTML = data.Nationalität;
             td7.innerHTML = data.Verein;
+            td8.innerHTML = data.Graduierung;
 
             var ratingButton = document.createElement("button");
             ratingButton.type = "button";
@@ -305,7 +305,7 @@
 
             ControlDiv.appendChild(bearbeitenButton);
 
-            trow.appendChild(td0);
+            //trow.appendChild(td0);
             trow.appendChild(td1);
             trow.appendChild(td2);
             trow.appendChild(td3);
@@ -313,6 +313,7 @@
             trow.appendChild(td5);
             trow.appendChild(td6);
             trow.appendChild(td7);
+            trow.appendChild(td8);
             trow.appendChild(ratingButton);
             trow.appendChild(ControlDiv);
 
