--- a/Regelwerk.html
+++ b/Regelwerk.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/StyleSheet1.css" />
     <title>Regelwerk</title>
     <style>
         /* Sie können die Größe des iframes nach Bedarf anpassen */
@@ -35,7 +36,6 @@
         console.log('selectedNummer:', selectedNummer);
 
 
-        // Die Funktion zum Wechseln der Seite
         // Die Funktion zum Wechseln der Seite
         function goBackToPage() {
             var urlParams = new URLSearchParams(window.location.search);
